--- a/index.html
+++ b/index.html
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <title>DevJobs - Inicio</title>
-    <meta charset="UTF-8">
-    <meta name="description" content="Encuentra las mejores ofertas de trabajo para desarrolladores en DevJobs.">
-</head>
-<body>
-</body>
+    <head>
+        <title>DevJobs - Inicio</title>
+        <meta charset="UTF-8">
+        <meta name="description" content="Encuentra las mejores ofertas de trabajo para desarrolladores en DevJobs.">
+    </head>
+    <body>
+        <header>
+            <h2>DevJobs</h2>
+
+            <nav>
+                <a href="">Inicio</a>
+                <a href="">Empleos</a>
+            </nav>
+
+            <div>
+                <a href="">Publicar un empleo</a>
+                <a href="Iniciar sesión"></a>
+            </div>
+        </header>
+    </body>
 </html>
