update index.html and add background.webp

--- a/index.html
+++ b/index.html
@@ -19,5 +19,15 @@
                 <a href="Iniciar sesión"></a>
             </div>
         </header>
+
+        <main>
+            <section>
+                <img src="./background.webp" alt="" />
+            </section>
+        </main>
+
+        <footer>
+
+        </footer>
     </body>
 </html>
