--- a/index.html
+++ b/index.html
@@ -36,6 +36,28 @@
                     <button type="submit">Buscar</button>
                 </form>
             </section>
+
+            <section>
+                <header>
+                    <h2>¿Por qué DebJobs?</h2>
+                    <p>DebJobs es la principal plataforma de búsqueda de empleo para desarrolladores. Conectamos a los mejores talentos con las empresas más innovadoras.</p>
+                </header>
+            </section>
+
+            <article>
+                <h3>Encuentra el trabajo de tus sueños</h3>
+                <p>Busca miles de empleos de las mejores empresas de todo el mundo.</p>
+            </article>
+
+            <article>
+                <h3>Conecta con las mejores empresas</h3>
+                <p>Conecta con empresas que están contratando por tus habilidades</p>
+            </article>
+
+            <article>
+                <h3>Obtén el salario que mereces</h3>
+                <p>Obtén el salario que mereces con nuestra calculadora de salarios</p>
+            </article>
         </main>
 
         <footer>
